--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,6 @@ task fatJar(type: Jar) {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
 }
