--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,6 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 
 }
+
+apply plugin: 'application'
+mainClassName = "cs.nyu.edu.adb.MainApplication"
